Add: health endpoints to openAPI (#1515)
